# project-euler-solutions

./: Cargo.toml  README.md
python/: README.md  pyproject.toml
python/src/: problem001.py
rust/: Cargo.toml  README.md
rust/src/: main.rs
rust/src/problems/: mod.rs  problem001.rs  problem002.rs  problem006.rs
