[tool.poetry]
name = "python3.10"
version = "0.1.0"
description = ""
authors = ["Anshul Chauhan <anshulchauhan@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
python_files = "*.py"
